# computervision

./: Dockerfile  README.md  docker-compose.yml  env  pyproject.toml
bash_scripts/: apptainer_pull  apptainer_shell  apptainer_train
notebooks/: 01_download_detection.ipynb  sequence.ipynb
notebooks/detection/: 01_download_dataset.ipynb  02_check_image_data.ipynb  03_datasets.ipynb  04_crop_images.ipynb  04_cropping_data.ipynb  05_augmentations.ipynb  05_augmentations_dev.ipynb  06_datasplit.ipynb  07_dataset.ipynb  08_train_dentex.ipynb  08_training.ipynb  09_inference.ipynb  09_inference_02.ipynb  09_inference_03.ipynb  10_performance.ipynb  10_performance_classes.ipynb  10_performance_mAP.ipynb  10_performance_precision_recall.ipynb
notebooks/detection/backup/: 09_inference_02-Copy1.ipynb  09_inference_02-Copy3.ipynb  10_performance_classes_01.ipynb
notebooks/detection/dev/: 05_augmentations_dev.ipynb  05_augmentations_roboflow_dev.ipynb  06_datasplit_roboflow_dev.ipynb  07_dataset_inference_dev.ipynb  08_train_roboflow_dev.ipynb
src/computervision/: __init__.py  datasets.py  dentex.py  fileutils.py  imageproc.py  inference.py  mapeval.py  performance.py  supervision.py  transformations.py
src/computervision/scripts/: cudacheck.py  train_dentex_01.py  train_roboflow_01.py
