[build-system]
requires = ["setuptools>=41", 
            "wheel", 
            "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"
[project]
name = "computervision"
dynamic = ["version"]
description = "The CCB Computervision Repository"
readme = "README.md"
authors = [
    { name = "Andreas Werdich", email = "andreas_werdich@hms.harvard.edu" }
]
requires-python = ">=3.12"
dependencies = []

[tool.uv]
python-preference = "only-system"

[project.scripts]
computervision = "computervision:main"

[tool.setuptools.package-data]
# include VERSION file to a package
computervision = ["VERSION"]

[tool.setuptools]
# this package will read some included files in runtime, avoid installing it as .zip
zip-safe = false

[tool.setuptools-git-versioning]
enabled = true
version_file = "computervision/VERSION"


