[build-system]
requires = ["setuptools>=41", 
            "wheel", 
            "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "computervision"
dynamic = ["version"]
description = "The CCB Computer Vision Repository"
readme = "README.md"
authors = [
    { name = "Andreas Werdich", email = "andreas_werdich@hms.harvard.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless",
    "numpy<2.0",
    "scikit-image>=0.25.2",
    "albumentationsx>=2.0.10",
    "transformers>=4.56.1",
    "tqdm>=4.67.1",
    "jupyterlab>=4.4.7",
    "ipywidgets>=8.1.7",
    "pandas-stubs>=2.3.2.250827",
    "protobuf<5.0",
]

[tool.uv]
python-preference = "only-system"

[project.scripts]
computervision = "computervision:main"

[tool.setuptools.package-data]
# include VERSION file to a package
computervision = ["VERSION"]

[tool.setuptools]
# this package will read some included files in runtime, avoid installing it as .zip
zip-safe = false

[tool.setuptools-git-versioning]
enabled = true
version_file = "computervision/VERSION"
